--- a/package.json
+++ b/package.json
@@ -9,12 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.1.3"
+    "@portabletext/to-html": "^2.0.0",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.30.1",
+    "aws-amplify": "^6.0.18",
+    "aws-sdk": "^2.1569.0",
+    "next": "14.1.0",
+    "next-sanity": "^7.1.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.50.1",
+    "sanity": "^3.30.1",
+    "sanity-plugin-media": "^2.2.5",
+    "sass": "^1.70.0",
+    "styled-components": "^6.1.8",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "eslint": "^8",
-    "eslint-config-next": "14.1.3"
+    "eslint-config-next": "14.1.0"
   }
 }
